Attempt 1: fix to Heroku issue

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/jcfleischli/hw4.git"
   },
-  "author": "John F",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jcfleischli/hw4/issues"
